--- a/src/App.css
+++ b/src/App.css
@@ -1,37 +1,42 @@
-.App {
-  text-align: center;
+body{
+  color:#001540
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+    animation: App-logo-spin infinite 0.3s linear;
   }
 }
+.bac-7 {
+  background: #001540;
+}
+.bac-3 {
+  background: #95A5A6;
+}
+.box-shadow-1 {
+  box-shadow: 0px 0px 15px #e3e3e3;
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.box-shadow-2 {
+  box-shadow: 0px 0px 15px #e8e8e8;
+
+}
+.color-2 {
+  color: #FCB43C;
 }
 
+.lable-color {
+  color: #001540;
+}
+
+.color-3 {
+  color: #95A5A6;
+}
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
